fix popover too wide

--- a/watchdogs/static/css/watchdogs.css
+++ b/watchdogs/static/css/watchdogs.css
@@ -1,7 +1,7 @@
 .full-screen,
 body,
 .el-tabs__content,
-.el-tabs__content>* {
+.el-tabs__content > * {
     width: 100%;
     height: 100%;
 }
@@ -29,16 +29,16 @@ html {
     padding-left: 3em;
 }
 
-#input_host_form>.el-form-item:first-child .el-form-item__content,
-#input_host_form>.el-form-item:first-child {
+#input_host_form > .el-form-item:first-child .el-form-item__content,
+#input_host_form > .el-form-item:first-child {
     width: 100%;
 }
 
-[aria-label="Edit Crawler JSON"] .el-textarea__inner {
+[aria-label='Edit Crawler JSON'] .el-textarea__inner {
     height: 10em;
 }
 
-.el-table_1_column_8>.cell {
+.el-table_1_column_8 > .cell {
     white-space: nowrap;
 }
 
@@ -66,7 +66,7 @@ p.custom_links {
     color: black;
     background-color: rgba(223, 223, 223, 0.5);
     padding: 0.5em 0 0.5em 0;
-    box-shadow: 3px 3px 5px #888888
+    box-shadow: 3px 3px 5px #888888;
 }
 
 .request_args_pre {
@@ -75,4 +75,11 @@ p.custom_links {
 
 [v-cloak] {
     display: none;
+}
+.el-popover {
+    max-width: 50%;
+}
+pre {
+    word-wrap: break-word;
+    white-space: pre-wrap;
 }
